--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "classnames": "^2.2.3",
     "express": "^4.13.3",
+    "fastclick": "^1.0.6",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.2",
+    "ts-loader": "^0.7.2",
+    "typescript": "^1.7.5",
     "webpack": "^1.12.10",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-dev-server": "^1.14.0",
     "webpack-hot-middleware": "^2.6.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "debug": "node --debug server.js"
   },
   "repository": {
     "type": "git",
