--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "classnames": "^2.2.3",
+    "css-loader": "^0.23.1",
     "express": "^4.13.3",
     "fastclick": "^1.0.6",
     "less": "^2.5.3",
     "less-loader": "^2.2.2",
+    "style-loader": "^0.13.0",
     "ts-loader": "^0.7.2",
     "typescript": "^1.7.5",
     "webpack": "^1.12.10",
